# tf-parser

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: rust.yml
examples/: example.rs  example.tf  read_tf.rs  scc40nll_hd_10lm_2tm.tf  scc40nll_hd_7lm_1tm.tf
src/: lib.rs  model.rs
src/parser/: base_parser.rs  color_parser.rs  contact_parser.rs  layer_dt_parser.rs  layer_parser.rs  mod.rs  rule_parser.rs  stipple_parser.rs  technology_parser.rs  tf_parser.rs  tile_parser.rs
