[package]
name = "tf_parser"
version = "0.1.0"
authors = ["erihsu <xuzhenyutc@icloud.com>"]
edition = "2018"
description = "technology(.tf) file parser in Rust"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/erihsu/tf-parser"
keywords = ["eda","parser","nom","ic"]

[dependencies]
nom = "6"
